Switch default theme to light, others - Fix error modal content alignment

--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -34,9 +34,13 @@
   justify-content: stretch;
   width: 100%;
 }
+.text-center {
+  text-align: center;
+}
 .center {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 .end {
   display: flex;
